// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for isDisabled: false and selected: false 1`] = `
":host {
  display: block;
  scroll-margin-block-start: calc(max(2px, var(--_p-multi-select-option-a,1) * 6px) + 36px) !important;
  scroll-margin-block-end: max(2px, var(--_p-multi-select-option-a,1) * 6px) !important;
  --_p-checkbox-scaling: var(--_p-multi-select-option-a) !important;
}
:host([hidden]) {
  display: none !important;
}
slot {
  display: block;
  padding-top: max(0px, calc((calc(var(--_p-checkbox-scaling) * 1.75rem) - var(--p-leading-normal)) / 2));
}
.option {
  display: flex;
  gap: calc(11.2px * (var(--_p-multi-select-option-a) - 0.64285714) + 4px);
  padding-block: calc(11.2px * (var(--_p-multi-select-option-a) - 0.64285714) + 4px);
  padding-inline: var(--_p-multi-select-option-b,calc(16.8px * (var(--_p-multi-select-option-a) - 0.64285714) + 6px)) calc(16.8px * (var(--_p-multi-select-option-a) - 0.64285714) + 6px);
  min-height: var(--p-leading-normal);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-contrast-high);
  cursor: pointer;
  text-align: start;
  word-break: break-word;
  box-sizing: content-box;
  border-radius: var(--p-radius-sm);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out), color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.option--highlighted {
  background: var(--p-color-frosted);
}
.option--highlighted, .option--selected {
  color: var(--p-color-primary);
}
.option--disabled {
  cursor: not-allowed;
}
.option--hidden {
  display: none;
}
.checkbox {
  all: unset;
  display: grid;
  width: calc(var(--_p-checkbox-scaling) * 1.75rem);
  height: calc(var(--_p-checkbox-scaling) * 1.75rem);
  margin-block: max(0px, calc((var(--p-leading-normal) - calc(var(--_p-checkbox-scaling) * 1.75rem)) / 2));
  box-sizing: border-box;
  font: var(--p-typescale-sm) var(--p-font-porsche-next);
  background: var(--p-checkbox-background-color,var(--p-color-frosted));
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out), border-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  border: 1px solid var(--p-checkbox-border-color,var(--p-color-contrast-lower));
  border-radius: var(--p-radius-md);
  flex-shrink: 0;
}
.checkbox::before {
  content: "";
  grid-area: 1/1;
}
.checkbox::after {
  content: "";
  margin: calc(-1px - max(0px, calc(24px - calc(var(--_p-checkbox-scaling) * 1.75rem)) / 2));
  grid-area: 1/1;
}
@media(forced-colors:active) {
  .option--disabled {
    color: GrayText;
  }
  .option--highlighted {
    forced-color-adjust: none;
    outline: 2px solid Highlight;
    outline-offset: -2px;
  }
}

@media(hover:hover) {
  .checkbox:hover {
    border-color: var(--p-checkbox-border-color,var(--p-color-primary));
  }
}
"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false and selected: true 1`] = `
":host {
  display: block;
  scroll-margin-block-start: calc(max(2px, var(--_p-multi-select-option-a,1) * 6px) + 36px) !important;
  scroll-margin-block-end: max(2px, var(--_p-multi-select-option-a,1) * 6px) !important;
  --_p-checkbox-scaling: var(--_p-multi-select-option-a) !important;
}
:host([hidden]) {
  display: none !important;
}
slot {
  display: block;
  padding-top: max(0px, calc((calc(var(--_p-checkbox-scaling) * 1.75rem) - var(--p-leading-normal)) / 2));
}
.option {
  display: flex;
  gap: calc(11.2px * (var(--_p-multi-select-option-a) - 0.64285714) + 4px);
  padding-block: calc(11.2px * (var(--_p-multi-select-option-a) - 0.64285714) + 4px);
  padding-inline: var(--_p-multi-select-option-b,calc(16.8px * (var(--_p-multi-select-option-a) - 0.64285714) + 6px)) calc(16.8px * (var(--_p-multi-select-option-a) - 0.64285714) + 6px);
  min-height: var(--p-leading-normal);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-contrast-high);
  cursor: pointer;
  text-align: start;
  word-break: break-word;
  box-sizing: content-box;
  border-radius: var(--p-radius-sm);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out), color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.option--highlighted {
  background: var(--p-color-frosted);
}
.option--highlighted, .option--selected {
  color: var(--p-color-primary);
}
.option--disabled {
  cursor: not-allowed;
}
.option--hidden {
  display: none;
}
.checkbox {
  all: unset;
  display: grid;
  width: calc(var(--_p-checkbox-scaling) * 1.75rem);
  height: calc(var(--_p-checkbox-scaling) * 1.75rem);
  margin-block: max(0px, calc((var(--p-leading-normal) - calc(var(--_p-checkbox-scaling) * 1.75rem)) / 2));
  box-sizing: border-box;
  font: var(--p-typescale-sm) var(--p-font-porsche-next);
  background: var(--p-checkbox-background-color,var(--p-color-frosted));
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out), border-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  border: 1px solid var(--p-checkbox-border-color,var(--p-color-contrast-lower));
  border-radius: var(--p-radius-md);
  flex-shrink: 0;
}
.checkbox::before {
  content: "";
  grid-area: 1/1;
  -webkit-mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') center/contain no-repeat;
  mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') center/contain no-repeat;
  background-color: var(--p-checkbox-icon-color,var(--p-color-canvas));
}
.checkbox::after {
  content: "";
  margin: calc(-1px - max(0px, calc(24px - calc(var(--_p-checkbox-scaling) * 1.75rem)) / 2));
  grid-area: 1/1;
}
.checkbox {
  background: var(--p-color-primary);
}
@media(forced-colors:active) {
  .option--disabled {
    color: GrayText;
  }
  .option--highlighted {
    forced-color-adjust: none;
    outline: 2px solid Highlight;
    outline-offset: -2px;
  }
  .checkbox::before {
    background: CanvasText;
  }
}

@media(hover:hover) {
  .checkbox:hover {
    border-color: transparent;
    background-color: var(--p-checkbox-border-color,var(--p-color-contrast-high));
  }
}
"
`;

exports[`getComponentCss() > should return correct css for isDisabled: true and selected: false 1`] = `
":host {
  display: block;
  opacity: 0.4 !important;
  scroll-margin-block-start: calc(max(2px, var(--_p-multi-select-option-a,1) * 6px) + 36px) !important;
  scroll-margin-block-end: max(2px, var(--_p-multi-select-option-a,1) * 6px) !important;
  --_p-checkbox-scaling: var(--_p-multi-select-option-a) !important;
}
:host([hidden]) {
  display: none !important;
}
slot {
  display: block;
  padding-top: max(0px, calc((calc(var(--_p-checkbox-scaling) * 1.75rem) - var(--p-leading-normal)) / 2));
}
@media(forced-colors:active) {
  :host {
    opacity: 1 !important;
    color: GrayText !important;
  }
}

.option {
  display: flex;
  gap: calc(11.2px * (var(--_p-multi-select-option-a) - 0.64285714) + 4px);
  padding-block: calc(11.2px * (var(--_p-multi-select-option-a) - 0.64285714) + 4px);
  padding-inline: var(--_p-multi-select-option-b,calc(16.8px * (var(--_p-multi-select-option-a) - 0.64285714) + 6px)) calc(16.8px * (var(--_p-multi-select-option-a) - 0.64285714) + 6px);
  min-height: var(--p-leading-normal);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-contrast-high);
  cursor: pointer;
  text-align: start;
  word-break: break-word;
  box-sizing: content-box;
  border-radius: var(--p-radius-sm);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out), color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.option--highlighted {
  background: var(--p-color-frosted);
}
.option--highlighted, .option--selected {
  color: var(--p-color-primary);
}
.option--disabled {
  cursor: not-allowed;
}
.option--hidden {
  display: none;
}
.checkbox {
  all: unset;
  display: grid;
  width: calc(var(--_p-checkbox-scaling) * 1.75rem);
  height: calc(var(--_p-checkbox-scaling) * 1.75rem);
  margin-block: max(0px, calc((var(--p-leading-normal) - calc(var(--_p-checkbox-scaling) * 1.75rem)) / 2));
  box-sizing: border-box;
  font: var(--p-typescale-sm) var(--p-font-porsche-next);
  background: var(--p-checkbox-background-color,var(--p-color-frosted));
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out), border-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  border: 1px solid var(--p-checkbox-border-color,var(--p-color-contrast-lower));
  border-radius: var(--p-radius-md);
  pointer-events: none;
  flex-shrink: 0;
}
.checkbox::before {
  content: "";
  grid-area: 1/1;
}
.checkbox::after {
  content: "";
  margin: calc(-1px - max(0px, calc(24px - calc(var(--_p-checkbox-scaling) * 1.75rem)) / 2));
  grid-area: 1/1;
}
@media(forced-colors:active) {
  .option--disabled {
    color: GrayText;
  }
  .option--highlighted {
    forced-color-adjust: none;
    outline: 2px solid Highlight;
    outline-offset: -2px;
  }
  .checkbox {
    border-color: GrayText;
  }
}

@media(hover:hover) {
  .checkbox:hover {
    border-color: var(--p-checkbox-border-color,var(--p-color-primary));
  }
}
"
`;

exports[`getComponentCss() > should return correct css for isDisabled: true and selected: true 1`] = `
":host {
  display: block;
  opacity: 0.4 !important;
  scroll-margin-block-start: calc(max(2px, var(--_p-multi-select-option-a,1) * 6px) + 36px) !important;
  scroll-margin-block-end: max(2px, var(--_p-multi-select-option-a,1) * 6px) !important;
  --_p-checkbox-scaling: var(--_p-multi-select-option-a) !important;
}
:host([hidden]) {
  display: none !important;
}
slot {
  display: block;
  padding-top: max(0px, calc((calc(var(--_p-checkbox-scaling) * 1.75rem) - var(--p-leading-normal)) / 2));
}
@media(forced-colors:active) {
  :host {
    opacity: 1 !important;
    color: GrayText !important;
  }
}

.option {
  display: flex;
  gap: calc(11.2px * (var(--_p-multi-select-option-a) - 0.64285714) + 4px);
  padding-block: calc(11.2px * (var(--_p-multi-select-option-a) - 0.64285714) + 4px);
  padding-inline: var(--_p-multi-select-option-b,calc(16.8px * (var(--_p-multi-select-option-a) - 0.64285714) + 6px)) calc(16.8px * (var(--_p-multi-select-option-a) - 0.64285714) + 6px);
  min-height: var(--p-leading-normal);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-contrast-high);
  cursor: pointer;
  text-align: start;
  word-break: break-word;
  box-sizing: content-box;
  border-radius: var(--p-radius-sm);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out), color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.option--highlighted {
  background: var(--p-color-frosted);
}
.option--highlighted, .option--selected {
  color: var(--p-color-primary);
}
.option--disabled {
  cursor: not-allowed;
}
.option--hidden {
  display: none;
}
.checkbox {
  all: unset;
  display: grid;
  width: calc(var(--_p-checkbox-scaling) * 1.75rem);
  height: calc(var(--_p-checkbox-scaling) * 1.75rem);
  margin-block: max(0px, calc((var(--p-leading-normal) - calc(var(--_p-checkbox-scaling) * 1.75rem)) / 2));
  box-sizing: border-box;
  font: var(--p-typescale-sm) var(--p-font-porsche-next);
  background: var(--p-checkbox-background-color,var(--p-color-frosted));
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out), border-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  border: 1px solid var(--p-checkbox-border-color,var(--p-color-contrast-lower));
  border-radius: var(--p-radius-md);
  pointer-events: none;
  flex-shrink: 0;
}
.checkbox::before {
  content: "";
  grid-area: 1/1;
  -webkit-mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') center/contain no-repeat;
  mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') center/contain no-repeat;
  background-color: var(--p-checkbox-icon-color,var(--p-color-canvas));
}
.checkbox::after {
  content: "";
  margin: calc(-1px - max(0px, calc(24px - calc(var(--_p-checkbox-scaling) * 1.75rem)) / 2));
  grid-area: 1/1;
}
.checkbox {
  background: var(--p-color-primary);
}
@media(forced-colors:active) {
  .option--disabled {
    color: GrayText;
  }
  .option--highlighted {
    forced-color-adjust: none;
    outline: 2px solid Highlight;
    outline-offset: -2px;
  }
  .checkbox {
    border-color: GrayText;
  }
  .checkbox::before {
    background: CanvasText;
  }
}

@media(hover:hover) {
  .checkbox:hover {
    border-color: transparent;
    background-color: var(--p-checkbox-border-color,var(--p-color-contrast-high));
  }
}
"
`;
